--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,6 +1,11 @@
-= asciidocme
+Let's see what it can do
 
+:toc:
 
-Test repo to see how github handles AsciiDoc: mission on finding the ultimate markup language never ends
+= Title
+
+This is important
 
 == Sub-title
+
+This is less important
